--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 *{    transition: all;
-    transition-duration: 800ms;}
+    transition-duration: 800ms;
+    scroll-behavior: smooth;
+
+}
 
 .hero{
 
@@ -65,31 +68,63 @@ li:hover{
 
 }
 
-.ikonka{
-  font-size: 40px;
-  color: #787878;
+
+
+.fa-instagram{
+  background-image: linear-gradient(115deg, #f9ce34, #ee2a7b, #6228d7);
+  color: transparent;
+  background-clip: text;
+  font-size: 60px;
 }
 
-.ikonka:hover{
+.fa-soundcloud{
 
-  color: #329ad6;
+    color: #FF5500;
+    font-size:60px;
 
 }
+
+.fa-chalkboard{
+    font-size:50px;
+    color: #3A6D58;
+
+}
+
 footer{
 
     font-weight: 500;
-    font-size: 20px;
-    height: 100px;
-    background-color: #252525;
+    font-size: 15px;
+    background-color: #272727;
     color: #999999;
 
 }
 
-.predel{
 
-    background-color: #329ad6;
+
+footer i:hover{
+
+    color: #cecdcd;
 
 }
+
+footer a{text-decoration: none;
+        color: #999999;
+        font-size: 20px;
+
+}
+
+footer a:hover{color: #cecdcd;}
+
+
+footer img{
+
+
+    max-height: 30px;
+
+
+}
+
+
 
 @media screen and (max-width:320px){    
 
