--- a/projektovy_denkoli/Teorie_test.css
+++ b/projektovy_denkoli/Teorie_test.css
@@ -1,3 +1,9 @@
+*{    transition: all;
+    transition-duration: 800ms;
+}
+  
+
+
 html, body{
   height: 100%;
 }
@@ -5,7 +11,6 @@ html, body{
 body {  
   display: flex;
   flex-direction: column;
-  font-family: Arial, sans-serif;
   background: linear-gradient(to right, #c2b6ff, #c8e4ff);
   
 }
@@ -14,12 +19,24 @@ body {
   
   margin-top: 150px;
 }
-nav{
-  background-color: #3b82b3;
-  
+
+
+.navbar{
+    color: #329ad6!important;
+    padding: 0 !important;
+    z-index: 999;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-nav li{
-  font-size: 18px;
+.navbar a{
+
+  font-weight:500;
+
+}
+li:hover{
+
+    box-shadow: 0 0 20px;
+
+
 }
 
 
@@ -35,7 +52,7 @@ nav li{
 }
 
 .question {
-  background-color: #3b82b3;
+  background-color: #329ad6;
   color: white;
   font-size: 24px;
   padding: 30px;
