--- a/projektovy_denkoli/Resene_priklady.css
+++ b/projektovy_denkoli/Resene_priklady.css
@@ -1,3 +1,8 @@
+*{    transition: all;
+    transition-duration: 800ms;
+}
+
+
 html, body{
   height: 100%;
 }
@@ -5,20 +10,30 @@ html, body{
 body {  
   display: flex;
   flex-direction: column;
-  font-family: Arial, sans-serif;
   background: linear-gradient(to right, #c2b6ff, #c8e4ff);
 
 }
 .container {
   margin-top: 150px;
 }
-nav {
-  background-color: #3b82b3;
-}
-nav li{
-  font-size: 18px;
-}
 
+.navbar{
+    color: #329ad6!important;
+    padding: 0 !important;
+    z-index: 999;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.navbar a{
+
+  font-weight:500;
+
+}
+li:hover{
+
+    box-shadow: 0 0 20px;
+
+
+}
 .quiz-card {
   background: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(10px);
@@ -30,7 +45,7 @@ nav li{
 }
 
 .question {
-  background-color: #3b82b3;
+  background-color: #329ad6;
   color: white;
   font-size: 24px;
   padding: 30px;
@@ -40,7 +55,7 @@ nav li{
 }
 
 .btn {
-  background-color: #3b82b3;
+  background-color: #329ad6;
   color: white;
 }
 .form-control {
